<resources>

    <string name="app_name">Electronic_caculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Electronic Calculator</string>
    <string name="power">power</string>
    <string name="resistor1">paralle resistors</string>
    <string name="voltage">voltage divided by 2 serial resistor</string>
    <string name="dc2dc">dc2dc</string>
    <string name="help">help</string>
    <string name="exit">exit</string>
    <string name="title_activity_activity_frame_layout">Activity_frameLayout</string>
    <string name="title_activity_activity__ralative_layout">Activity_RalativeLayout</string>
    <string name="title_activity_activity_table_layout">ActivityTableLayout</string>
    <string name="title_activity_resistor_divider">Resistor_divider</string>
    <string name="R1">Ra</string>
    <string name="R2">Rb</string>
    <string name="Uin">Uin</string>
    <string name="Uout">Uout</string>
    <string name="Calculate">Calculate</string>
    <string name="Return">Return</string>
    <string name="Clear">Clear</string>
    <string name="divider_hint1">pls input ra</string>
    <string name="divider_hint2">input rb</string>
    <string name="divider_hint3">input uin</string>
    <string name="divider_hint4">is uout</string>
    <string name="title_activity_power">Power</string>
    <string name="power_tips">Tips: enter the Vpp voltage of the sinwave 1kHz,and the impedance of the speaker, and we will calculate the output power </string>
    <string name="OutputVpp">Vpp</string>
    <string name="OutputVrms">Vrms</string>
    <string name="Impedance">Impedance</string>
    <string name="OutputPower">OutputPower</string>
    <string name="OutputVppHint">Vpp from scope</string>
    <string name="OutputVrmsHint">Vrms from multimeter</string>
    <string name="ImpedanceHint">impedance of speaker</string>
    <string name="OutputPowerHint">here is the result</string>
    <string name="title_activity_dc2dc">Dc2dc</string>
    <string name="DcDcRefVol">Reference Voltage</string>
    <string name="DcDcR1">R1</string>
    <string name="DcDcR2">R2</string>
    <string name="DcDcVo">Vout</string>
    <string name="DcDcRefVolHint">input Ref Vol</string>
    <string name="DcDcR1Hint">set R1</string>
    <string name="DcDcR2Hint">set R2</string>
    <string name="DcDcVoHint">Vout</string>
    <string name="title_activity_parallel_resistor">Parallel_resistor</string>
    <string name="parallelR1">R1</string>
    <string name="parallelR2">R2</string>
    <string name="parallelR3">R3</string>
    <string name="parallelR4">R4</string>
    <string name="parallelR5">R5</string>
    <string name="parallelRp">R</string>
    <string name="parallelR1Hint">R1</string>
    <string name="parallelR2Hint">R2</string>
    <string name="parallelR3Hint">R3</string>
    <string name="parallelR4Hint">R4</string>
    <string name="parallelR5Hint">R5</string>
    <string name="parallelRpHint">R</string>
    <string name="title_activity_help">Help</string>
    <string name="help1">1.error may happen if informal input</string>
    <string name="help2">2.press clear key to restart input</string>
	<string name="help3">3.app will detect empty box to automative calculation</string>
</resources>